# blockworld

./: .clang-format  .clang-tidy  .envrc  .gitignore  Brewfile  CMakeLists.txt  README.md  conanfile.txt
assets/: fragment.glsl  vertex.glsl
assets/shaders/: fragment.glsl  vertex.glsl
client/assets/shaders/: fragment.glsl  vertex.glsl
client/include/: core.h  memory.h  utils.h
client/include/core/: Assets.h  BoxGeometry.h  BufferGeometry.h  Camera.h  Input.h  Material.h  Mesh.h  Scene.h  Textures.h.save  Window.h
client/include/core/textures/: Image.h  Pixel.h  Texture.h  TextureArray.h  TextureAtlas.h  TextureRect.h
client/include/core/webgl/: WebGLProgram.h  WebGLRenderer.h  WebGLShader.h
client/include/renderer/utils/: PngHelper.h
client/include/world/: Chunk.h
client/src/: constants.h  core.h  example-bitmasks.cpp  main.cpp  memory.cpp  utils.cpp
client/src/core/: Assets.cpp  Assets.h  BlockMaterial.cpp  BlockMaterial.h  BoxGeometry.cpp  BoxGeometry.h  BufferGeometry.cpp  BufferGeometry.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Vertex.h  Window.cpp  Window.h
client/src/core/textures/: Image.cpp  Image.h  Pixel.h  Texture.h  TextureArray.cpp  TextureAtlas.cpp  TextureAtlas.h  TextureRect.h
client/src/core/webgl/: GLAttribute.h  GLProgram.cpp  GLProgram.h  GLShader.cpp  GLShader.h  GLTypes.h  GLUniform.cpp  GLUniform.h  IntResource.h  WebGLProgram.cpp  WebGLProgram.h  WebGLRenderer.cpp  WebGLRenderer.h  WebGLShader.cpp  WebGLShader.h
client/src/importer/: MinecraftImporter.cpp  MinecraftImporter.h
client/src/utils/: Tracer.h  env.cpp  env.h  executable.cpp  executable.h  math.cpp  math.h  memory.cpp  memory.h
client/src/world/: Block.cpp  Block.h  BlockMap.cpp  BlockMap.h  Chunk.cpp  Chunk.h  World.cpp  World.h
docs/: Geometry.md  minecraft.md
include/: linmath.h
public/: index.html
src/: core.h  main.cpp  stb.cpp
src/core/: Assets.cpp  Assets.h  BoxGeometry.cpp  BoxGeometry.h  BufferGeometry.cpp  BufferGeometry.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  WebGlRenderer.cpp  WebGlRenderer.h  Window.cpp  Window.h
src/core/materials/: ShaderMaterial.cpp  ShaderMaterial.h
src/core/webgl/: WebGLProgram.cpp  WebGLProgram.h  WebGLRenderer.cpp  WebGLRenderer.h  WebGLShader.cpp  WebGLShader.h
website/: README.md  index.js  package.json
